--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/create
 target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 target/classes/tickets.json
 target/flights-analizer-1.0-SNAPSHOT.jar.original
+.vscode/** */
